# leetcodesolver

./: README.md  pyproject.toml
media/videos/animation/480p15/partial_movie_files/TwoSum/: partial_movie_file_list.txt
src/leetcodesolver/: crew.py  main.py  ollama.py  solution.md
src/leetcodesolver/config/: agents.yaml  tasks.yaml
src/leetcodesolver/examples/: animation.py  animation_2.py  animation_3.py  solution.md  solution_draft.md
src/leetcodesolver/media/Tex/: 973ce7516e53ba3d.tex  b6aa844fb8bae886.tex
src/leetcodesolver/media/videos/animation_2/480p15/partial_movie_files/GenScene/: partial_movie_file_list.txt
